monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.grafana"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
